tests/expected/recovery/declarations/004_export_decl_broken.txt
{
  "type": "Program",
  "start": 0,
  "end": 113,
  "sourceType": "module",
  "hashbang": null,
  "body": [
    {
      "type": "ExportNamedDeclaration",
      "start": 52,
      "end": 77,
      "declaration": {
        "type": "VariableDeclaration",
        "start": 59,
        "end": 77,
        "kind": "const",
        "declarations": [
          {
            "type": "VariableDeclarator",
            "start": 65,
            "end": 77,
            "id": {
              "type": "Identifier",
              "start": 65,
              "end": 71,
              "name": "broken"            },
            "init": {
              "type": "Literal",
              "start": 74,
              "end": 75,
              "value": 1,
              "raw": "1"            }          }
        ]      },
      "specifiers": [],
      "source": null,
      "attributes": []    },
    {
      "type": "ExpressionStatement",
      "start": 80,
      "end": 82,
      "expression": {
        "type": "Literal",
        "start": 80,
        "end": 81,
        "value": 2,
        "raw": "2"      }    },
    {
      "type": "VariableDeclaration",
      "start": 83,
      "end": 112,
      "kind": "const",
      "declarations": [
        {
          "type": "VariableDeclarator",
          "start": 89,
          "end": 111,
          "id": {
            "type": "Identifier",
            "start": 89,
            "end": 107,
            "name": "anchor_after_error"          },
          "init": {
            "type": "Literal",
            "start": 110,
            "end": 111,
            "value": 1,
            "raw": "1"          }        }
      ]    }
  ],
  "comments": [
    {
      "type": "Line",
      "start": 0,
      "end": 51,
      "value": " Export declaration with a malformed initializer."
    }
  ],
  "errors": [
    {
      "code": "K2020",
      "severity": "error",
      "message": "Expected expression after operator",
      "line": 2,
      "column": 27,
      "offset": 78
    },
    {
      "code": "K2010",
      "severity": "error",
      "message": "Expected semicolon",
      "line": 2,
      "column": 27,
      "offset": 78
    }
  ]
}
error[K2020]: Expected expression after operator
  --> /Users/kakurega/dev/projects/kessel/tests/runners/../fixtures/recovery/declarations/004_export_decl_broken.js:2:27
   |
 2 | export const broken = 1 + * 2;
   |                           ^
  = note: see TS1109

error[K2010]: Expected semicolon
  --> /Users/kakurega/dev/projects/kessel/tests/runners/../fixtures/recovery/declarations/004_export_decl_broken.js:2:27
   |
 2 | export const broken = 1 + * 2;
   |                           ^
  = note: see TS1005

--- Statistics ---
Arena: used=37760B reserved=16777216B ratio=0%
Parse errors: 2
